gccida/g1/objects_must_conflict_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/objects_must_conflict_p/src/alias.c:788:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/objects_must_conflict_p/src/alias.c:797:17: error: expected expression
if ( *( _OWORD *)&t1 == 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/objects_must_conflict_p/src/alias.c:797:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&t1 == 0LL ) 
        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/objects_must_conflict_p/src/obj/alias.o] Error 1
